<resources>
    <string name="app_name">DriverApp</string>
    <string name="logo_image_view">logo_image_view</string>
    <string name="grab_driver_text">Grab Driver</string>
    <string name="hint_name">name</string>
    <string name="hint_email">email</string>
    <string name="hint_phone">phone</string>
    <string name="login_button_text">Login</string>
    <string name="code_vn">+84</string>
    <string name="test_name">dangnd</string>
    <string name="test_email">nguyendinhdang@gmail.com</string>
    <string name="test_phone">0962539727</string>
    <string name="empty_name">name is required</string>

    <string name="email_invalid">email is invalid</string>
    <string name="phone_invalid">phone is invalid</string>
    <string name="instruction_text_view">Enter 6 digit code sent to</string>
    <string name="receive_text_view">Didn\'t receive it ?</string>
    <string name="time_out_text">Request a new code in %s</string>
    <string name="hint_code">000000</string>
    <string name="label_request_new_code">
    <![CDATA[
        <html>
            <body>
              <pre><u><font color="#4CAF50">Request new code</font></u></pre>
            </body>
        </html>
    ]]>
    </string>
    <string name="verification_code_button_text">Verification Code</string>
    <string name="phone_number">+ 84 %s</string>
    <string name="error_code">Enter a valid verification code</string>
    <string name="title_activity_driver">Driver Map</string>
    <string name="find_user_button_text">Find User</string>
    <string name="title_of_you">You</string>
    <string name="you_are_online">You are online</string>
    <string name="you_are_offline">You are offline</string>
    <string name="go_button_text">Go</string>
    <string name="hint_destination">Go…</string>
    <string name="pickup_location">Pickup location</string>
    <string name="user_cancel_operation">you cancel search destination address</string>
    <string name="please_change_state_you">Please change your status to online</string>
    <string name="map_image_view">map image view</string>
    <string name="accept_button_text">Accept</string>
    <string name="decline_button_text">Decline</string>
    <string name="title_activity_tracking">Map</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
    <string name="icon_star">icon star</string>
    <string name="test_star">4.5</string>
    <string name="menu_history">History</string>
    <string name="menu_bill">Bill</string>
    <string name="menu_help">Help</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_edit_profile">Edit profile</string>
    <string name="edit_profile">Update</string>
    <string name="edit_profile_message">Please fill all information</string>
    <string name="edit_button_dialog">Edit</string>
    <string name="cancel_button_dialog">Cancel</string>
    <string name="error_upload_image">error upload image</string>
    <string name="permission_denied">permission_denied</string>
    <string name="upload_avatar_success">upload avatar success</string>
    <string name="upload_avatar_failed">upload avatar failed</string>
    <string name="update_infor_success">update infor success</string>
    <string name="update_infor_failed">update infor failed</string>
    <string name="start_trip_button_text">Start Trip</string>
    <string name="drop_off_here">Drop Off Here</string>
    <string name="title_activity_trip_detail">Map</string>
    <string name="base_fare_text">Base fare:</string>
    <string name="time_text">Time:</string>
    <string name="distance_text">Distance:</string>
    <string name="estimated_payout">ESTIMATED PAYOUT</string>
    <string name="from_text">From:</string>
    <string name="to_text">To:</string>
    <string name="direction_detail">Direction detail</string>
    <string name="stop_button_text">stop direction</string>
    <string name="start_direction_detail">START</string>
    <string name="pause_button_text">pause direction</string>
    <string name="detail_user_image_view">detail user image view</string>
    <string name="direction_image_view">direction image view</string>
    <string name="direction_text">DIRECTIONAL</string>
    <string name="trip_detail_text">Trip Detail</string>

    <string name="back_icon">back icon</string>
    <string name="star_user_text">STAR USER</string>
    <string name="sum_pay">Sum:</string>
    <string name="call_details_text">Call Details</string>
    <string name="test_star_number">Star</string>
    <string name="test_name_driver">John Event</string>
    <string name="test_phone_driver">+84 0395616595</string>
    <string name="call_driver">call driver</string>
    <string name="user_details_text">User Details</string>
    <string name="cancel_trip">Cancel trip</string>
    <string name="direction_image">direction image</string>
    <string name="user_destination_exist">destination of user already exist</string>
    <string name="star_image_view">star image view</string>
    <string name="my_routes">My Routes</string>
    <string name="back_image_view">back image view</string>
    <string name="license_plates_hint">License plates</string>
    <string name="vehicle_name_hint">vehicle name</string>
    <string name="car_information_text">Car information</string>
    <string name="car_rates_text">Car rates (VND)</string>
    <string name="_0_2_km">0 – 2 km (VND)</string>
    <string name="_3_10_km">3 – 10 km (VND)</string>
    <string name="_11_20_km">11 – 20 km (VND)</string>
    <string name="_20_km"><![CDATA[> 20 km]]> (VND)</string>
    <string name="confirm_text">Confirm</string>
    <string name="field_empty_text">field empty</string>
    <string name="_15a222_22">15A222.22</string>
    <string name="kia_morning">Kia Morning</string>
    <string name="_17000">17000</string>
    <string name="_13000">13000</string>
    <string name="_14000">14000</string>
    <string name="_12000">12000</string>
    <string name="icon_phone">icon phone</string>
    <string name="end_game_text">End Game</string>
    <string name="close_image_view">close image view</string>
    <string name="sum_text">SUM</string>
    <string name="cancel_trip_message">The driver has canceled the trip for some reason, please find another driver</string>
    <string name="state_not_working">not_working</string>
    <string name="start_trip_message">The driver has started the trip</string>
    <string name="arrived_message">The driver %s arrived</string>
    <string name="pick_up">PICK-UP</string>
    <string name="drop_off">DROP-OFF</string>
    <string name="icon_green">icon green</string>
    <string name="icon_blue">icon blue</string>
    <string name="trip_price_text">VND %sK</string>
    <string name="driver_restart">driver restart</string>
    <string name="state_working">working</string>
    <string name="cancel_message">Driver cancel booking from user</string>
    <string name="network_not_connect">Network not connect</string>
</resources>
