<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CarChargeActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/amaranth"
                android:text="@string/car_information_text"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"/>

        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/licence_plates_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/amaranth"
                android:hint="@string/license_plates_hint"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/vehicle_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:background="@null"
                android:hint="@string/vehicle_name_hint"
                android:inputType="text"
                android:padding="8dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/amaranth"
            android:text="@string/car_rates_text"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/zero_to_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:background="@null"
                android:hint="@string/_0_2_km"
                android:inputType="number"
                android:padding="8dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/three_to_ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:background="@null"
                android:hint="@string/_3_10_km"
                android:inputType="number"
                android:padding="8dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/eleven_to_twenty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:background="@null"
                android:hint="@string/_11_20_km"
                android:inputType="number"
                android:padding="8dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/bigger_twenty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amaranth"
                android:background="@null"
                android:hint="@string/_20_km"
                android:inputType="number"
                android:padding="8dp"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="20sp"
                android:textStyle="bold" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_login"
            android:layout_marginTop="20dp"
            android:text="@string/confirm_text"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>