<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TripDetailActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/toolbar_trip_detail"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        map:cardBackgroundColor="@android:color/white"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintBottom_toTopOf="@id/layout_detail">

        <ImageView
            android:id="@+id/back_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/back_icon"
            android:src="@drawable/ic_back"/>

        <TextView
            android:id="@+id/star_user_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/amaranth"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:text="@string/star_user_text"/>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        map:layout_constraintBottom_toTopOf="@id/trip_detail_map"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@id/toolbar_trip_detail"
        map:layout_constraintVertical_weight="7">

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/amaranth"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:text="MONDAY, 22/5/2019" />

        <TextView
            android:id="@+id/fee_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/amaranth"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="30sp"
            tools:text="50.0$" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/amaranth"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="20sp"
            android:text="@string/trip_detail_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amaranth"
                android:text="@string/base_fare_text"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/base_fare_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:fontFamily="@font/amaranth"
                tools:text="1.2$"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amaranth"
                android:text="@string/time_text"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/time_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:fontFamily="@font/amaranth"
                tools:text="1 minutes"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amaranth"
                android:text="@string/distance_text"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/distance_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:fontFamily="@font/amaranth"
                tools:text="10 km"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amaranth"
                android:text="@string/estimated_payout"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/estimated_payout_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:fontFamily="@font/amaranth"
                tools:text="10.5 $"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_margin="8dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amaranth"
                android:text="@string/from_text"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/from_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="start"
                android:fontFamily="@font/amaranth"
                tools:text="Me Linh, Ha Noi, Viet Nam"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/amaranth"
                android:text="@string/to_text"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/to_text_view"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="start"
                android:fontFamily="@font/amaranth"
                tools:text="Ho Hoan Kiem, Hoan Kiem, Ha Noi"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:maxLines="1"
                android:ellipsize="end"/>

        </LinearLayout>

    </LinearLayout>

    <fragment
        android:id="@+id/trip_detail_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@id/layout_detail"
        map:layout_constraintVertical_weight="3" />

</android.support.constraint.ConstraintLayout>