<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.DriverActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/destination_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_destination"
            android:inputType="text"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintBottom_toTopOf="@id/driver_map"
            map:layout_constraintEnd_toStartOf="@id/go_button"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/go_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_button_text"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            map:layout_constraintBottom_toTopOf="@id/driver_map"
            map:layout_constraintStart_toEndOf="@id/destination_edit_text"/>

        <fragment
            android:id="@+id/driver_map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            map:layout_constraintBottom_toTopOf="@id/driver_card_view"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toBottomOf="@id/destination_edit_text" />

        <android.support.v7.widget.CardView
            android:id="@+id/driver_card_view"
            android:layout_width="0dp"
            android:layout_height="100dp"
            map:layout_constraintBottom_toBottomOf="parent"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toBottomOf="@id/driver_map">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Switch
                    android:id="@+id/state_driver_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:checked="false" />

                <Button
                    android:id="@+id/find_user_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_toEndOf="@id/state_driver_switch"
                    android:text="@string/find_user_button_text" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/driver_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"/>

</FrameLayout>
